# pcn

./: CMakeLists.txt  demo.py  gen_model_list.py  io_util.py  preprocess_complete_pc.py  requirements.txt  test_kitti.py  test_shapenet.py  tf_util.py  train.py
models/: pcn_emd.py
render/: model_list.txt  process_exr.py  render_depth.py
sample/: CMakeLists.txt  mesh_sampling.cpp
vis/: CMakeLists.txt  pcd_vis.cpp
